[package]
name = "mountaincar_rs"
version = "0.1.0"
edition = "2021"
author = "Dylan Dronnier <dylan.dronnier@posteo.net>"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "game"           # The name of the target.
path = "src/main.rs"    # The source file of the target.

[[bin]]
name = "train"           # The name of the target.
path = "src/ai.rs"    # The source file of the target.

[[bin]]
name = "ia_play"           # The name of the target.
path = "src/ia_play.rs"    # The source file of the target.

[dependencies]
candle-core = "0.3"
candle-nn = "0.3"
image = "0.24"
itertools = "0.12"
rand = "0.8"

[dependencies.bevy]
version = "^0.13"
default-features = false 
features = ["png", "bevy_gizmos", "bevy_text", "bevy_winit", "bevy_asset", "bevy_ui", "default_font"]

[target.'cfg(target_os = "linux")'.dependencies.bevy]
version = "^0.13"
default-features = false 
features = ["wayland"]
