# [package]
# name = "mountaincar_rs"
# version = "0.1.0"
# edition = "2021"
# author = "Dylan Dronnier <dylan.dronnier@posteo.net>"

[workspace]
resolver = "2"
members = ["games/mountaincar", "games/ring_pong", "uilib", "rl"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
