[package]
name = "mountaincar"
version = "0.1.0"
edition = "2018"

[dependencies]
uilib = { path = "../../uilib" }
candle-core = "0.3"
candle-nn = "0.3"
image = "0.24"
itertools = "0.12"
rand = "0.8"
rfd = {version = "0.14", features = ["gtk3"], default-features = false}

[dependencies.bevy]
version = "^0.13"
default-features = false 
features = ["png", "bevy_gizmos", "bevy_text", "bevy_winit", "bevy_asset",
  "bevy_ui", "bevy_pbr", "default_font"]

[target.'cfg(target_os = "linux")'.dependencies.bevy]
version = "^0.13"
default-features = false 
features = ["wayland"]
