[package]
name = "mountaincar_mods"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "mountaincar_mods"
path = "src/lib.rs"

[dependencies]
candle-core = "^0.4"
candle-nn = "^0.4"
rl = { path = "../../../rl" }
mountaincar_env = { path = "../environment" }
itertools = "^0.12"
