[package]
name = "mountaincar_render"
version = "0.1.0"
edition = "2018"

[dependencies]
uilib = { path = "../../../uilib" }
rl = { path = "../../../rl" }
mountaincar_mods = { path = "../models" }
mountaincar_env = { path = "../environment" }
image = "^0.25"
rfd = {version = "0.14", features = ["gtk3"], default-features = false}

[dependencies.bevy]
version = "^0.13"
default-features = false 
features = ["png", "bevy_gizmos", "bevy_text", "bevy_winit", "bevy_asset",
  "bevy_ui", "bevy_pbr", "default_font"]

[target.'cfg(target_os = "linux")'.dependencies.bevy]
version = "^0.13"
default-features = false 
features = ["wayland"]
